--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+title: Jun Zhang's Homepage
+page-top-title: Jun Zhang
+top-section-bg-text: Electrical Engineering
+home-subtitle: Jun Zhang&ensp;|&ensp;张钧
+copyright-text: '&copy; Jun Zhang 2024-2025. All Rights Reserved.'
